2010-07-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1535/tests
	* malloc04/init.c, malloc04/malloc04.scn: Address issues in test. A mix
	of work by Ralf and Joel.

2010-07-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* termios01/init.c, termios01/termios01.scn: Fully exercise tcsetattr.

2010-07-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add test for exercising sbrk() extension
	to Malloc Family.
	* malloc04/.cvsignore, malloc04/Makefile.am, malloc04/init.c,
	malloc04/malloc04.doc, malloc04/malloc04.scn: New files.

2010-07-06	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* termios06/init.c, termios06/termios06.scn: Add a couple more PPPDISC
	cases. Coverage of these paths is near complete.

2010-07-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* malloctest/system.h: Enable malloc statistics.

2010-07-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: tar01 and tar02 not merged yet.

2010-07-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, malloc03/init.c: Add test for PPPDDISC.
	* termios06/.cvsignore, termios06/Makefile.am, termios06/init.c,
	termios06/termios06.doc, termios06/termios06.scn,
	termios06/test_pppd.c: New files.

2010-07-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add test for GCC C++ library helpers.
	* gxx01/.cvsignore, gxx01/Makefile.am, gxx01/gxx01.doc,
	gxx01/gxx01.scn, gxx01/gxx_wrappers.h, gxx01/init.c: New files.

2010-07-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* termios04/termios_testdriver_intr.c: Task driven IO now works.

2010-07-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add test for task driven drivers.
	* termios05/.cvsignore, termios05/Makefile.am, termios05/init.c,
	termios05/termios05.doc, termios05/termios05.scn,
	termios05/termios_testdriver_taskdriven.c,
	termios05/termios_testdriver_taskdriven.h: New files.

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>
