@@ -7,7 +7,7 @@ ACLOCAL_AMFLAGS = -I ../aclocal
 SUBDIRS = POSIX
 
 SUBDIRS += bspcmdline01 cpuuse gxx01 \
-    malloctest malloc02 malloc03 malloc04 heapwalk \
+    malloctest malloc02 malloc03 malloc04 malloc05 heapwalk \
     putenvtest monitor monitor02 rtmonuse stackchk stackchk01 \
     termios termios01 termios02 termios03 termios04 termios05 termios06 \
     rtems++ tztest block01 block02 block03 block04 block05 block06 block07 \
