@@ -51,6 +51,7 @@ malloctest/Makefile
 malloc02/Makefile
 malloc03/Makefile
 malloc04/Makefile
+malloc05/Makefile
 monitor/Makefile
 monitor02/Makefile
 putenvtest/Makefile
